--- a/css/style.css
+++ b/css/style.css
@@ -258,7 +258,7 @@ ul {
     display: block;
 }
 
-.aside .nav li a {
+.nav-link {
     font-size: 16px;
     font-weight: 600;
     display: block;
@@ -267,9 +267,10 @@ ul {
     padding: 5px 15px;
 }
 
-.aside .nav li a.active {
+.active-link {
     color: var(--skin-color);
 }
+
 
 .aside .nav li a i {
     margin-right: 15px;
