--- a/css/style.css
+++ b/css/style.css
@@ -655,7 +655,7 @@ h3.my-profession {
 }
 
 .portfolio .portfolio-item-inner .portfolio-img img {
-    height: 100%;
+    height: 300px;
     width: 100%;
     display: block;
 }
@@ -834,4 +834,5 @@ h3.my-profession {
 
 
 }
+
 
