--- a/css/style.css
+++ b/css/style.css
@@ -657,8 +657,7 @@ h3.my-profession {
 .portfolio .portfolio-item-inner .portfolio-img img {
     height: 300px;
     width: 100%;
-    display: flex;
-    justify-content: center;
+    display: block;
 }
 
 .portfolio .portfolio-item span {
@@ -835,6 +834,7 @@ h3.my-profession {
 
 
 }
+
 
 
 
