--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@ ul {
 
 .row {
     display: flex;
-    justify-content: space around;
+    justify-content: space-around;
     flex-wrap: wrap;
     margin-left: -15px;
     margin-right: -15px;
@@ -835,6 +835,7 @@ h3.my-profession {
 
 
 }
+
 
 
 
