--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,9 @@ ul {
 
 .row {
     display: flex;
+    flex-direction: row;
     justify-content: space-around;
+    align-items: center;
     flex-wrap: wrap;
     margin-left: -15px;
     margin-right: -15px;
@@ -835,6 +837,7 @@ h3.my-profession {
 
 
 }
+
 
 
 
